<resources>
    <string name="app_name">Ninja</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_now_text"><![CDATA[Don\'t have an account?Register Now]]></string>
    <string name="login_now_text">Already have an account? Login Now</string>
    <string name="remember_pass_text">Remember password? Login Now</string>
    <string name="screen1">Բարի գալուստ Նինջա!</string>
    <string name="screen2">Արի տեսնենք՝ կկարողանաս պատասխանել</string>
    <string name="screen1desc">Խաղացեք ընկերների հետ, պատասխանեք հարցերին ու նվաճեք առաջատարների գագաթը:</string>
    <string name="screen2desc">Հայկական հումոր, լեգենդար տեսարաններ ու մեմեր՝ մեկ վայրում: </string>
    <string name="startDesc">Create a long video or shorts and upload on youtube. Interact with your subscribers on youtube live.</string>
    <string name="default_web_client_id">530152070036-iqcni1knrtf917t9pj34b9fsapq6h172.apps.googleusercontent.com</string>
    <string name="if_open_email" />

    <!--    new pass page-->
    <string name="create_new_pass_text">Ստեղծեք նոր գաղտնաբառ</string>
    <string name="caption_createpass">Նոր գաղտնաբառը պետք է տարբերվի նախկինում օգտագործածներից</string>
    <string name="new_pass">Նոր գաղտնաբառ</string>
    <string name="confrim_new_pass">Հաստատել գաղտնաբառը</string>
    <string name="reset_pass">Վերականգնել</string>

    <!--    forgot pass page-->
    <string name="forgot_title">Մոռացել եք գաղտնաբառը?</string>
    <string name="forgot_caption">Մի անհանգստացեք! Խնդրում ենք մուտքագրել \nէլ․փոստը</string>
    <string name="email">Էլ․ փոստ</string>
    <string name="send">Ուղարկել</string>

    <!--    login paage-->
    <string name="login_title">Բարի գալուստ! Ուրախ ենք քեզ տեսնել</string>
    <string name="password">Գաղտնաբառ</string>
    <string name="forgot_pass">Մոռացել եք գաղտնաբառը?</string>
    <string name="login">Մուտք</string>
    <string name="or_login_with">կամ</string>

    <!--    home page-->
    <string name="username">Օգտանուն</string>
    <string name="home_title">Քուիզեր</string>
    <string name="kargin_mainpage">Կարգին</string>
    <string name="vitamin_mainpage">Վիտամին</string>
    <string name="choose_quiz">Ընտրել</string>

    <!--    register page-->
    <string name="register">Գրանցվել</string>
    <string name="register_title">Սկսելու համար գրանցվեք</string>

    <!--    settings page-->
    <string name="edit_profile">Խմբագրել</string>
    <string name="language">Լեզու</string>
    <string name="logout">Դուրս գալ</string>

    <!--    nav bar-->
    <string name="home">Գլխավոր</string>
    <string name="discover">Բացահայտել</string>
    <string name="leaderboard">Աղյուսակ</string>
    <string name="settings">Կարգավորումներ</string>

    <!--    kargin fragment-->
    <string name="kargin_fragment_title">Կարգին</string>
    <string name="multer">Կարգին մուլտեր</string>
    <string name="serial">Կարգին սերիալ</string>
    <string name="haxordum">Կարգին հաղորդում</string>
    <string name="start_quiz">Սկսել</string>


    <!--    edit profile-->
    <string name="change_picture">Change Picture</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="english">English</string>
    <string name="armenian">Armenian</string>
    <string name="select_language">Select Language</string>
    <string name="choose_profile_picture">Choose Profile Picture</string>

<!--    leaderboard-->
    <string name="leaderboard_title">Առաջատարների աղյուսակ</string>
    <string name="score">%1$d միավոր</string>
    <string name="score_progress">Իմ պրոգրեսը</string>
    <string name="answered_right">Ճիշտ </string>
    <string name="answered_wrong">Սխալ</string>
    <string name="total">Ընդհանուր</string>

    <!--    Discover-->
    <string name="watch">նայել</string>


    <string-array name="language_options">
        <item>Armenian</item>
        <item>English</item>
    </string-array>


</resources>
