<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5ECDC"
    tools:context=".ForgotPassActivity"
    android:padding="24dp">

    <!-- Back button-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardBackButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:radius="23dp"
        android:elevation="4dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:contentDescription="Back"
            android:scaleType="centerInside"
            android:src="@drawable/ic_arrow_back" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textForgPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/forgot_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/cardBackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/forgot_caption"
        android:textSize="15sp"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/textForgPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/enterMail" />

    <EditText
        android:id="@+id/enterMail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:background="@drawable/bg_edittext"
        android:paddingStart="16dp"
        android:paddingEnd="48dp"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Send email btn -->
    <Button
        android:id="@+id/btnSend"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/send"
        android:backgroundTint="#4A5DF3"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/enterMail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Login now -->
    <TextView
        android:id="@+id/rememberLoginNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/remember_pass_text" />
</androidx.constraintlayout.widget.ConstraintLayout>
